..F.....S. [ZBXNEXT-2069] added HOST.PORT macro support to internal/trigger based notifications and also to trigger names/descriptions  (wiper, Oleg)
A.F....... [ZBX-1357] updated American English, French, Hungarian, Italian, Japanese, Russian, Slovak and Turkish translations; thanks to Zabbix translators (Richlv)

Bug fixes:
...G...... [ZBX-7648] fixed name resolution when using net.dns items (Juris)
........S. [ZBX-6315] fixed deleting of lost triggers by the low-level discovery rule (Sasha)
........S. [ZBX-7109] improved performance of processing discovered triggers by the low-level discovery rule (Sasha)
........S. [ZBX-7608] fixed crashes when global scripts timed out (wiper)
........S. [ZBX-7561] fixed SQL errors while processing host prototypes under MySQL (Sasha)
..F....... [ZBX-7688] fixed discovery item import (Eduard)
A.F....... [ZBX-4218] rewrote the item key parser's source code for independence on the mbstring.func_overload option (Sasha)
...G...... [ZBX-7687] fixed items system.swap.in[] and system.swap.out[] going into an infinite loop on Solaris (asaveljevs)
A......... [ZBX-7647] fixed trigger.get trying to sort by "lastchange" DESC even if a different sort field or sort order is given (Pavels)
.......PS. [ZBX-7686] fixed UTF-8 strings not being fetched fully from Oracle (asaveljevs)
........S. [ZBX-7653] correctly expand ITEM.LOG.* macros when retrieving eventlog specific attributes for log,logrt items (wiper)
.......PS. [ZBX-7661] fixed configuration parser to allow 2G cache values (it was restricted to 2G-1 before) (wiper)
..F....... [ZBX-7639] fixed error when trying to replace host groups and add a new host group at the same time in the host mass update form (Pavels)
...G...PS. [ZBX-7458] added source IP validation on daemon startup (Juris)
A......... [ZBX-7660] fixed host.get returning the "templates" property even if the "templateids" parameter is not used (Pavels)